adding IDs for all buttons and text field in app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="Phone">Enter Phone#</string>
     <string name="Age">Enter Age</string>
     <string name="activeUser">Active_User</string>
+    <string name="ViewCustomer">View_User</string>
+    <string name="Adduser">Add_User</string>
 </resources>
